--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -204,7 +204,10 @@
           {% endif %}
           <div class="grid__item post-large--five-twelfths">
             <p></p>
-            <small class="h6"><b>Note: </b><h3 style="font-weight:normal; display:inline-block;">You will add quantities after you select locations during the checkout process.</h3></small>
+            <small class="h6"><b>Please Note: </b><h3 style="font-weight:normal; display:inline-block;">
+            - You will add quantities after you select locations during the checkout process.<br>
+            - There is a maximum number of product and location combinations allowed per order.  No more than 100 combinations of products and locations (e.g. 20 products and 5 locations, 10 products and 10 locations, etc) can be accepted per order.
+            </h3></small>
           </div>
           <div class="grid__item text-right{% if section.settings.cart_notes_enable or true %} post-large--seven-twelfths{% endif %}">
             {% comment %}
