--- a/templates/customers/account.prod-upload-form-mod.liquid
+++ b/templates/customers/account.prod-upload-form-mod.liquid
@@ -1661,7 +1661,7 @@
                         
                         $('#multiselectOption').multiselect({
                           search: {
-                                      left: '<input type="text" name="q" class="form-control" placeholder="Search" /><i class="fa fa-search" aria-hidden="true" style="font-size: 14px;padding-top: 0px;position: absolute;top: 10px;right: 24px;"></i><br>',
+                                      left: '<input type="text" name="q" class="form-control" placeholder="Search" /><i class="fa fa-search" aria-hidden="true" style="font-size: 14px;padding-top: 0px;position: absolute;top: 10px;right: 24px;"></i><span><span class="w3-text-red">*</span> Select <b>Default</b> if the product does not have any elements.</span>',
                                       right: '<input type="text" name="q" class="form-control" placeholder="Search" /><i class="fa fa-search" aria-hidden="true" style="font-size: 14px;padding-top: 0px;position: absolute;top: 10px;right: 24px;"></i><br>',
                                   },
                           fireSearch: function(value) {
